[sc-8177] Deeper sdk clean up (#1245)
* Add missing translations for on-demand summarisation

* [sc-8177] SDK cleanup

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -22,7 +22,6 @@
 	"account.create_nua_key": "Create new Nuclia Understanding API key ",
 	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
-	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
 	"account.delete.error": "Error when deleting the account",
 	"account.delete.go_to": "If you want to delete your account, please go to",
 	"account.delete.keep_user_title": "Would you like to keep your user profile?",
@@ -64,6 +63,7 @@
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_key_delete": "Delete Nuclia Understanding API key",
 	"account.nua_key_delete_warning": "By deleting this key, all the ongoing jobs will be lost.",
+	"account.nua_key_zone": "Select the zone and the processing provider you would like to use for this key",
 	"account.nua_keys": "Nuclia Understanding API keys",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Once your data is processed, the result is posted to this URL",
@@ -790,6 +790,8 @@
 	"stash.create.in_progress": "Knowledge Box creation in progress…",
 	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.semantic_model.label": "Languages",
+	"stash.create.summary_model.help": "Indicate the model used by the on-demand summarisation feature",
+	"stash.create.summary_model.label": "On-demand summarisation",
 	"stash.create.title": "Create a Knowledge Box",
 	"stash.create.user_prompts.examples": "Examples",
 	"stash.create.user_prompts.prompt": "Prompt",
@@ -798,7 +800,7 @@
 	"stash.create.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
 	"stash.create.visual_labeling.help": "Allow to visually select some parts of the document layout and annotate them.",
 	"stash.create.visual_labeling.label": "Annotate by selection",
-	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box (defaults to the account’s zone)",
+	"stash.create.zone_description": "Select the zone and the processing provider you would like to use for this Knowledge Box",
 	"stash.delete.delete": "Delete Knowledge Box?",
 	"stash.delete.error": "Error when creating the Knowledge Box",
 	"stash.delete.warning": "If you delete the Knowledge Box {{ kb }}, all data will also be deleted",
