[sc-8264] New summarisation configuration in KB settings
- new translations for summary option
- new summary prompt field
- new feature flag from summarization feature
- use angular control flow uin settings page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -775,6 +775,8 @@
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
 	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
+	"stash.config.option.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
+	"stash.config.option.summary-simple": "Resum estàndard d'un parell de línies",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.config.success": "La nova configuració s'ha desat correctament.",
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la Knowledge Box.",
@@ -789,8 +791,13 @@
 	"stash.create.in_progress": "Creació de la Knowledge Box en curs...",
 	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
 	"stash.create.semantic_model.label": "Idiomes",
+	"stash.create.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
+	"stash.create.summary.label": "Tipus de resum a demanda",
 	"stash.create.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
 	"stash.create.summary_model.label": "Resum a demanda",
+	"stash.create.summary_prompt.examples": "Exemples",
+	"stash.create.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
+	"stash.create.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
 	"stash.create.title": "Crea una Knowledge Box",
 	"stash.create.user_prompts.examples": "Exemples",
 	"stash.create.user_prompts.prompt": "Prompt",
