--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -776,6 +776,8 @@
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
 	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
+	"stash.config.option.summary-extended": "Detailed summary with a list of highlights and relevant terms",
+	"stash.config.option.summary-simple": "Standard summary of a couple of lines",
 	"stash.config.own_key": "Use own key",
 	"stash.config.success": "The new settings have been saved successfully.",
 	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your Knowledge Box.",
@@ -790,8 +792,13 @@
 	"stash.create.in_progress": "Knowledge Box creation in progress…",
 	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.semantic_model.label": "Languages",
+	"stash.create.summary.help": "Specifies the kind of on-demand summary to be generated ",
+	"stash.create.summary.label": "On-demand summary kind",
 	"stash.create.summary_model.help": "Indicate the model used by the on-demand summarisation feature",
 	"stash.create.summary_model.label": "On-demand summarisation",
+	"stash.create.summary_prompt.examples": "Examples",
+	"stash.create.summary_prompt.prompt": "Custom summarisation prompt",
+	"stash.create.summary_prompt.prompt_help": "Defines a custom prompt that will be used instead of the default prompt when generating a summary.",
 	"stash.create.title": "Create a Knowledge Box",
 	"stash.create.user_prompts.examples": "Examples",
 	"stash.create.user_prompts.prompt": "Prompt",
