--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -775,6 +775,8 @@
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
 	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
+	"stash.config.option.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
+	"stash.config.option.summary-simple": "Sumario estándar de un par de líneas.",
 	"stash.config.own_key": "Utilizar key propia",
 	"stash.config.success": "La nueva configuración se ha guardado correctamente.",
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la Knowledge Box.",
@@ -789,8 +791,13 @@
 	"stash.create.in_progress": "Creación de la Knowledge Box en curso...",
 	"stash.create.semantic_model.help": "Indica los idiomas utilizados en la información que subirás en tu KB.",
 	"stash.create.semantic_model.label": "Idiomas",
+	"stash.create.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
+	"stash.create.summary.label": "Tipo de resumen bajo demanda",
 	"stash.create.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
 	"stash.create.summary_model.label": "Resumen bajo demanda",
+	"stash.create.summary_prompt.examples": "Ejemplos",
+	"stash.create.summary_prompt.prompt": "Petición de resumen personalizada",
+	"stash.create.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
 	"stash.create.title": "Crea una Knowledge Box",
 	"stash.create.user_prompts.examples": "Ejemplos",
 	"stash.create.user_prompts.prompt": "Prompt",
