--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -776,6 +776,8 @@
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
 	"stash.config.option.nuclia-everest-v1": "Nuclia Everest",
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
+	"stash.config.option.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
+	"stash.config.option.summary-simple": "Résumé standard de quelques lignes",
 	"stash.config.own_key": "Utiliser sa propre clé",
 	"stash.config.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre Knowledge Box.",
@@ -790,8 +792,13 @@
 	"stash.create.in_progress": "Création de la Knowledge Box en cours…",
 	"stash.create.semantic_model.help": "Indiquez les langues utilisées dans les informations que vous téléchargerez dans votre KB.",
 	"stash.create.semantic_model.label": "Les langues",
+	"stash.create.summary.help": "Spécifie le type de résumé à la demande à générer",
+	"stash.create.summary.label": "Type de résumé à la demande",
 	"stash.create.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
 	"stash.create.summary_model.label": "Résumé à la demande",
+	"stash.create.summary_prompt.examples": "Exemples",
+	"stash.create.summary_prompt.prompt": "Invite de résumé personnalisée",
+	"stash.create.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
 	"stash.create.title": "Créer une Knowledge Box",
 	"stash.create.user_prompts.examples": "Exemples",
 	"stash.create.user_prompts.prompt": "Prompt",
