--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -199,6 +199,7 @@
 	"billing.phone": "Phone number",
 	"billing.phone_placeholder": "e.g. +34 000 000 000",
 	"billing.postal_code": "ZIP",
+	"billing.prices_vat": "VAT might be applicable",
 	"billing.quotas.files": "Maximum number of files",
 	"billing.quotas.files-up-to": "Files up to",
 	"billing.quotas.generative": "Generative query",
